pr-demo/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aks-helloworld
  namespace: my-namespace
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: aks-helloworld
