pr-demo/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-ingress
  namespace: my-namespace
spec:
  ingressClassName: nginx
  rules:
  - host: host-name
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: aks-helloworld
            port:
              number: 80
